M5 - Create web pages for system administrator cabinet : fixed dialog titles, added truncating long messages for users reviews
git-svn-id: svn+ssh://redwerk.com/home/svn/likelabs@5165 5beb62dc-ff0c-0410-899a-bd8837d9df5a

--- a/server/web-interface/src/main/webapp/static/css/all.css
+++ b/server/web-interface/src/main/webapp/static/css/all.css
@@ -859,7 +859,7 @@ input:focus, textarea:focus {
 }
 
 .item-wrapper .item-data{
-    font-size: 16pt;
+    font-size: 18px;
     font-style: italic;
     color: #767676;
     
